# robotic

./: .gitignore  .gitmodules  NOTES.md  README.md  best_model.ipynb  cnn-model-output.txt  cnn-model.ipynb  combined-dataset.ipynb  datasets.ipynb  distance-dataset.ipynb  distance-model-output.txt  distance-model.ipynb  distance-model.py  distance-model2-output.txt  distance-model2.ipynb  distance-model2.py  distance-model3-output.txt  distance-model3.py  eval.ipynb  generate_stubs.sh  lol.ipynb  main.ipynb  main.py  offset-dataset.ipynb  offset-model.ipynb  offset-train-output.txt  offset-training.py  pos-ori-dataset.ipynb  pos-ori-model.ipynb  pyproject.toml  yo.ipynb
examples/: 00_visualize_panda_frames.py  00_vizualize_panda_frames.py  01_visualize_primitives.py  01_vizualize_primitives.py  13_viz_masks.py  13_vizualize_masks.py  14_generate_scenes.py  14_scene_generation.py  15_vizualize_komo.py  20_collect_data.py  21_collect_data_multi.py  21_data_collection_multi.py  22_collect_data_timed.py  23_inspect_data.py  24_collect_data_multi_2.py  24_collect_data_multi_flat.py  25_merge_datasets.py  26_inspect_data_flat.py  30_build_torch_dataset.py  31_profile_dataset.py  99_reconstruct_tsdf.py  camera.py  collect_data.py  render.ipynb  tsdf.py
examples/models/: 01_pose_size_mlp.py  02_depth_seg_pose.py  simple.py
models/easy/: 00_preprocess_dataset.py  __init__.py
notebooks/: 01_data_analysis.ipynb  easy.ipynb  feasibility_predictor.ipynb  presentation.ipynb  regression.ipynb  target_pose_predictor.ipynb  train.ipynb
robotic/: __init__.py  datasets.py  helpers.py  manipulation.py  models.py  scenario.py
test/: test_big_obj.py  test_lift.py  test_manipulations.py  test_push.py  test_simple.py
(+20 files in other folders)
