[project]
name = "robotic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy>=2.3.2"]

[dependency-groups]
dev = [
    { include-group = "examples" },
]
examples = [
    "h5py>=3.14.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pygobject>=3.52.3",
    "trimesh>=4.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robotic"]
