[project]
name = "robotic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torch-tb-profiler>=0.4.3",
    "tqdm>=4.67.1",
    "trimesh>=4.7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robotic", "models"]
